fix iframe alignment

--- a/styling.css
+++ b/styling.css
@@ -32,7 +32,6 @@ p, h2, h3{
 }
 
 img {
-  height: auto;
   width: 100%;
 }
 
@@ -40,7 +39,6 @@ img {
   max-width: 100%;
   height: auto;
   padding-top: 17px;
-  padding-bottom: 17px;
 }
 
 nav {
@@ -49,15 +47,14 @@ top: 0px;
 }
 
 @media screen and (max-width:600px){
-  .flex-nav, .flex-main, .flex-main2 {
+  .flex-nav, .flex-main, .flex-main2, .spotify {
     flex-direction: column;
   }
 
   body table{
     width: 100%;
     font-size: .7em;
-  }
-  
+  }  
 }
 
 a {
@@ -184,8 +181,13 @@ table {
 }
 
 .spotify {
-  border: 0;
-  display: flex; 
+  display: flex;
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 960px;
+  border: none;
+  
 }
 
 .small-text{
